--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         color: #e5e5e5;
       }
     </style>
+    <!-- Babel added as requested, though Vite handles transpilation -->
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="importmap">
 {
   "imports": {
@@ -43,8 +45,10 @@
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
   <body>
     <div id="root"></div>
-  </body>
+  <script type="module" src="/index.tsx"></script>
+</body>
 </html>
